Began testing with different input buttons
currently working with the number stepper webkit spinner properties

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Less Testing</title>
 <!--    <link rel="stylesheet" href="styles.css" />-->
     <link type="text/css" rel="stylesheet/less" href="styles.less" />
+    <link type="text/css" rel="stylesheet" href="flatui/font-awesome.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.5.0/less.min.js"></script>
 </head>
@@ -111,10 +112,13 @@
     </div>
     <hr class="sixteen columns" />
     <h1 class="sixteen columns">Other Inputs</h1>
-    <div class="sixteen columns" id="otherInputs">
+    <div class="sixteen columns row" id="otherInputs">
         <div class="number_input">
             <input type="number" value="Numbaa" />
         </div>
     </div>
+    
+    <!-- Jquery -->
+    <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
 </body>
 </html>
