Added a title in and removed some headings

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="js/less-1.6.1.min.js"></script>
 </head>
 <body class="container">
+    <div class="row" id="title">
+        <h1 class="twelve columns">Flat.less</h1>
+        <hr class="twelve columns" />
+        <p class="twelve columns">Welcome to a Flat UI themed Less/CSS framework</p>
+    </div>
     <div class="row">
         <h1 class="twelve columns">Grid System</h1>
         <hr class="twelve columns" />
@@ -44,21 +49,18 @@
         <hr class="twelve columns" />
         <div id="buttons_forms">
             <div class="one-third column">
-                <h3>Success Button</h3>
                 <button class="tiny_reg">Success</button>
                 <button class="small_reg">Success</button>
                 <button class="medium_reg">Success</button>
                 <button class="large_reg">Success</button>
             </div>
             <div class="one-third column">
-                <h3>Error Button</h3>
                 <button class="tiny_err">Error</button>
                 <button class="small_err">Error</button>
                 <button class="medium_err">Error</button>
                 <button class="large_err">Error</button>
             </div>
             <div class="one-third column">
-                <h3>Attention Button</h3>
                 <button class="tiny_att">Attention</button>
                 <button class="small_att">Attention</button>
                 <button class="medium_att">Attention</button>
@@ -72,13 +74,11 @@
         <hr class="twelve columns" />
         <div class="twelve columns" id="buttons_forms">
             <div class="one-third column alpha">
-                <h3>Text Inputs</h3>
                 <input class="regular full" type="text" value="Type here" />
                 <input class="error full"   type="text" value="Type here" />
                 <input class="success full" type="text" value="Type here" />
             </div><!-- End Text Inputs -->
             <div class="one-third column">
-                <h3>Radio Buttons</h3>
                 <div class="radio_button_green full left">
                     <label for="rad_button1">Default</label>
                     <input type="radio" name="radios" id="rad_button1" />
@@ -93,7 +93,6 @@
                 </div>
             </div><!-- End Radio Buttons -->
             <div class="one-third column omega">
-                <h3>Check Boxes</h3>
                 <div class="checkbox_blue">
                     <label for="checkbox1">Checkbox 1</label>
                     <input type="checkbox" id="checkbox1" />
