Minor formatting and index.html changes
- Added in color shortcuts “#turquoise”
- Fixed the text input placeholder not being centered
- Fixed checkbox labels floating weird
- Added more color and removed extra checkboxes
- Simplified a few styles and separated color shortcuts

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
     </div>
     <div id="grid_system">
         <div class="row">
-            <div class="one column"><h2>One</h2><h3>44px</h3></div>
-            <div class="eleven columns"><h2>Eleven</h2><h3>684px</h3></div>
+            <div class="one column" id="alizarin"><h2>One</h2><h3>44px</h3></div>
+            <div class="eleven columns" id="pomegranate"><h2>Eleven</h2><h3>684px</h3></div>
         </div>
         <div class="row">
-            <div class="two columns"><h2>Two</h2><h3>108px</h3></div>
-            <div class="ten columns"><h2>Ten</h2><h3>620px</h3></div>
+            <div class="two columns" id="carrot"><h2>Two</h2><h3>108px</h3></div>
+            <div class="ten columns" id="pumpkin"><h2>Ten</h2><h3>620px</h3></div>
         </div>
         <div class="row">
-            <div class="three columns"><h2>Three</h2><h3>172px</h3></div>
-            <div class="nine columns"><h2>Nine</h2><h3>556px</h3></div>
+            <div class="three columns" id="sunflower"><h2>Three</h2><h3>172px</h3></div>
+            <div class="nine columns" id="darksunflower"><h2>Nine</h2><h3>556px</h3></div>
         </div>
         <div class="row">
-            <div class="four columns"><h2>Four</h2><h3>236px</h3></div>
-            <div class="eight columns"><h2>Eight</h2><h3>492px</h3></div>
+            <div class="four columns" id="turquoise"><h2>Four</h2><h3>236px</h3></div>
+            <div class="eight columns" id="greensea"><h2>Eight</h2><h3>492px</h3></div>
         </div>
         <div class="row">
-            <div class="five columns"><h2>Five</h2><h3>300px</h3></div>
-            <div class="seven columns"><h2>Seven</h2><h3>428px</h3></div>
+            <div class="five columns" id="emerald"><h2>Five</h2><h3>300px</h3></div>
+            <div class="seven columns" id="nephritis"><h2>Seven</h2><h3>428px</h3></div>
         </div>
         <div class="row">
-            <div class="six columns"><h2>Six</h2><h3>364px</h3></div>
-            <div class="six columns"><h2>Six</h2><h3>364px</h3></div>
+            <div class="six columns" id="peterriver"><h2>Six</h2><h3>364px</h3></div>
+            <div class="six columns" id="belizehole"><h2>Six</h2><h3>364px</h3></div>
         </div>
         <div class="row">
-            <div class="twelve columns"><h2>Twelve</h2><h3>940px</h3></div>
+            <div class="twelve columns" id="amethyst"><h2>Twelve</h2><h3>940px</h3></div>
         </div>
     </div><!--End Grid System -->
     
@@ -103,29 +103,17 @@
             </div><!-- End Radio Buttons -->
             <div class="one-third column">
                 <h2>Checkboxes</h2>
-                <div class="checkbox_blue">
-                    <label for="checkbox1">Checkbox 1</label>
+                <div class="checkbox_green disabled full left">
+                    <label for="checkbox1">Disabled</label>
                     <input type="checkbox" id="checkbox1" />
                 </div>
-                <div class="checkbox_red">
-                    <label for="checkbox2">Checkbox 2</label>
+                <div class="checkbox_green full left">
+                    <label for="checkbox2">Default</label>
                     <input type="checkbox" id="checkbox2" />
                 </div>
-                <div class="checkbox_green">
-                    <label for="checkbox3">Checkbox 3</label>
-                    <input type="checkbox" id="checkbox3" />
-                </div>
-                <div class="checkbox_yellow">
-                    <label for="checkbox4">Checkbox 4</label>
-                    <input type="checkbox" id="checkbox4" />
-                </div>
-                <div class="checkbox_orange">
-                    <label for="checkbox5">Checkbox 5</label>
-                    <input type="checkbox" id="checkbox5" />
-                </div>
-                <div class="checkbox_purple">
-                    <label for="checkbox6">Checkbox 6</label>
-                    <input type="checkbox" id="checkbox6" />
+                <div class="checkbox_green full left">
+                    <label for="checkbox3">Checked</label>
+                    <input type="checkbox" checked id="checkbox3" />
                 </div>
             </div><!-- End Checkboxes -->  
         </div><!-- End Form Elements -->
