Added nav bars and formatting
- Added buttons to form.less and formatted a few things
- Removed <hr> formatting and added a few classes
- Moved buttons from mixin.less and subbed in real hex
- Added nav.less for navigation bars
- Re-styled buttons on index and added nav bars
- Added rollover effect for color boxes
- Added nav.less to main stylesheet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
         <h1 class="twelve columns">Grid System</h1>
-        <hr />
+        <hr class="twelve columns" />
         <p class="twelve columns">Using our grid system can help you layout page elements much faster during the development process. Just put the .container class on the body and you will then be able to layout elements accordingly using our one-twelve column classes. Each row adds up to twelve columns based on the typical 960px grid.</p>
     </div>
     <div class="row" id="grid_system">
@@ -50,26 +50,22 @@
     <div class="row">
         <div class="row">
             <h1 class="twelve columns">Buttons</h1>
-            <hr />
+            <hr class="twelve columns" />
         </div>
         <div id="buttons_forms">
-            <div class="one-third column">
-                <button class="tiny_reg hide_for_mobile">Success</button>
-                <button class="small_reg hide_for_mobile">Success</button>
-                <button class="medium_reg hide_for_mobile">Success</button>
-                <button class="large_reg">Success</button>
+            <div class="one-half column">
+                <h2>Regular Buttons</h2>
+                <button class="success">Success</button>
+                <button class="error">Error</button>
+                <button class="attention">Attention</button>
+                <button class="caution">Caution</button>
             </div>
-            <div class="one-third column">
-                <button class="tiny_err hide_for_mobile">Error</button>
-                <button class="small_err hide_for_mobile">Error</button>
-                <button class="medium_err hide_for_mobile">Error</button>
-                <button class="large_err">Error</button>
-            </div>
-            <div class="one-third column">
-                <button class="tiny_att hide_for_mobile">Attention</button>
-                <button class="small_att hide_for_mobile">Attention</button>
-                <button class="medium_att hide_for_mobile">Attention</button>
-                <button class="large_att">Attention</button>
+            <div class="one-half column">
+                <h2>Or make them rounded!</h2>
+                <button class="success rounded">Success</button>
+                <button class="error rounded">Error</button>
+                <button class="attention rounded">Attention</button>
+                <button class="caution rounded">Caution</button>
             </div>
         </div>
     </div><!--End Buttons -->
@@ -77,7 +73,7 @@
     <div class="row">
         <div class="row">
             <h1 class="twelve columns">Form Elements</h1>
-            <hr />
+            <hr class="twelve columns" />
         </div>
         <div id="buttons_forms">
             <div class="one-third column">
@@ -88,30 +84,30 @@
             </div><!-- End Text Inputs -->
             <div class="one-third column">
                 <h2>Radio Buttons</h2>
-                <div class="radio_button_green full left disabled">
+                <div class="radio-button-green full left disabled">
                     <label for="rad_button2">Disabled</label>
                     <input type="radio" name="radios" id="rad_button2" />
                 </div>
-                <div class="radio_button_green full left">
+                <div class="radio-button-green full left">
                     <label for="rad_button1">Default</label>
                     <input type="radio" name="radios" id="rad_button1" />
                 </div>
-                <div class="radio_button_green full left">
+                <div class="radio-button-green full left">
                     <label for="rad_button3">Checked</label>
                     <input type="radio" name="radios" checked id="rad_button3" />
                 </div>
             </div><!-- End Radio Buttons -->
             <div class="one-third column">
                 <h2>Checkboxes</h2>
-                <div class="checkbox_green disabled full left">
+                <div class="checkbox-green disabled full left">
                     <label for="checkbox1">Disabled</label>
                     <input type="checkbox" id="checkbox1" />
                 </div>
-                <div class="checkbox_green full left">
+                <div class="checkbox-green full left">
                     <label for="checkbox2">Default</label>
                     <input type="checkbox" id="checkbox2" />
                 </div>
-                <div class="checkbox_green full left">
+                <div class="checkbox-green full left">
                     <label for="checkbox3">Checked</label>
                     <input type="checkbox" checked id="checkbox3" />
                 </div>
@@ -122,52 +118,52 @@
     <div class="row" id="colors">
         <div class="row">
             <h1 class="twelve columns">Colors</h1>
-            <hr />
+            <hr class="twelve columns" />
         </div>
         <div class="row">
             <div class="one-quarter column color_container">
-                <div class="full" id="alizarin"></div>
-                <div class="full" id="pomegranate"></div>
+                <div class="full" id="alizarin"><h2>#alizarin</h2></div>
+                <div class="full" id="pomegranate"><h2>#pomegranate</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="carrot"></div>
-                <div class="full" id="pumpkin"></div>
+                <div class="full" id="carrot"><h2>#carrot</h2></div>
+                <div class="full" id="pumpkin"><h2>#pumpkin</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="sunflower"></div>
-                <div class="full" id="darksunflower"></div>
+                <div class="full" id="sunflower"><h2>#sunflower</h2></div>
+                <div class="full" id="darksunflower"><h2>#darksunflower</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="turquoise"></div>
-                <div class="full" id="greensea"></div>
+                <div class="full" id="turquoise"><h2>#turquoise</h2></div>
+                <div class="full" id="greensea"><h2>#greensea</h2></div>
             </div>
         </div>
         <div class="row">
             <div class="one-quarter column color_container">
-                <div class="full" id="emerald"></div>
-                <div class="full" id="nephritis"></div>
+                <div class="full" id="emerald"><h2>#emerald</h2></div>
+                <div class="full" id="nephritis"><h2>#nephritis</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="peterriver"></div>
-                <div class="full" id="belizehole"></div>
+                <div class="full" id="peterriver"><h2>#peterriver</h2></div>
+                <div class="full" id="belizehole"><h2>#belizehole</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="amethyst"></div>
-                <div class="full" id="wisteria"></div>
+                <div class="full" id="amethyst"><h2>#amethyst</h2></div>
+                <div class="full" id="wisteria"><h2>#wisteria</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="clouds"></div>
-                <div class="full" id="silver"></div>
+                <div class="full" id="clouds"><h2>#clouds</h2></div>
+                <div class="full" id="silver"><h2>#silver</h2></div>
             </div>
         </div>
         <div class="row">  
             <div class="one-quarter column color_container">
-                <div class="full" id="concrete"></div>
-                <div class="full" id="asbestos"></div>
+                <div class="full" id="concrete"><h2>#concrete</h2></div>
+                <div class="full" id="asbestos"><h2>#asbestos</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="wetasphault"></div>
-                <div class="full" id="midnightblue"></div>
+                <div class="full" id="wetasphault"><h2>#wetasphault</h2></div>
+                <div class="full" id="midnightblue"><h2>#midnightblue</h2></div>
             </div>
         </div>
     </div><!-- End Colors -->
@@ -175,29 +171,30 @@
 
     <div class="row" id="image_editing">
         <h1 class="twelve columns">Image Edits</h1>
-        <hr />
+        <hr class="twelve columns" />
         <div class="row">
             <div class="one-third column centered">
                 <img src="flatui/images/cat1.jpg" class="img-rounded" alt="" />
-                <h2>class: img-rounded</h2>
+                <h2>Make it rounded <span class="lightened">.img-rounded</span></h2>
             </div>
             <div class="one-third column centered">
                 <img src="flatui/images/cat2.jpg" class="img-circle" alt="" />
-                <h2>class: img-circle</h2>
+                <h2>Make a circle <span class="lightened">.img-circle</span></h2>
             </div>
             <div class="one-third column centered">
                 <img src="flatui/images/cat3.jpg" class="img-thumb" alt="" />
-                <h2>class: img-thumb</h2>
+                <h2>Make a thumbnail <span class="lightened">.img-thumb</span></h2>
             </div>
         </div>
     </div><!--End Image Edits -->
     
     <div class="row" id="navigation_bars">
         <h1 class="twelve columns">Navigation Bars</h1>
-        <hr />
+        <hr class="twelve columns" />
         <div class="row">
-            <div class="one-half column centered">
-                <nav class="navbar-regular">
+            <div class="twelve columns">
+                <h2>Regular nav bar <span class="lightened">.navbar-reg</span></h2>
+                <nav class="navbar-reg">
                     <ul>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
@@ -206,11 +203,12 @@
                         <li><a href="#">Link</a></li>
                     </ul>
                 </nav>
-                <h2>regular nav bar</h2>
             </div>
-            <div class="one-half column centered">
-                <nav class="navbar-red">
+            <div class="twelve columns">
+                <h2>or add color! and maybe a logo? <span class="lightened">.navbar-green</span></h2>
+                <nav class="navbar-green">
                     <ul>
+                        <li class="nav-logo"><a href="#"></a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
@@ -218,7 +216,6 @@
                         <li><a href="#">Link</a></li>
                     </ul>
                 </nav>
-                <h2>or add color!</h2>
             </div>
         </div>
     </div><!--End Navigation Bars -->
