added icomoon as an easy to use icon font
- Adjusted a bit of the navbar values and added active state
- Added active state and adjusted lettering
- Added font.less to main stylesheet

--- a/index.html
+++ b/index.html
@@ -203,12 +203,14 @@
                         <li><a href="#">Link</a></li>
                     </ul>
                 </nav>
-            </div>
+            </div>    
+        </div>
+        <div class="row">
             <div class="twelve columns">
-                <h2>or add color! and maybe a logo? <span class="lightened">.navbar-green</span></h2>
-                <nav class="navbar-green">
+                <h2>or add color a logo and round it! <span class="lightened">.navbar-green</span></h2>
+                <nav class="navbar-green rounded">
                     <ul>
-                        <li class="nav-logo"><a href="#"></a></li>
+                        <li><a href="#" class="active"><span class="icon-home2"></span></a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
                         <li><a href="#">Link</a></li>
