Simple off-canvas tweaks
- Made off-canvas drawer bigger
- Removed all transitions/hover effects for performance
- Removed easing on drawer slide-out

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <h2>or try off-canvas! <span class="lightened">nav.green.off-canvas</span></h2>
                 <nav class="off-canvas" id="off-canvas-nav">
                     <div class="hidden">
-                        <a href="#menu-content"><span class="icon-menu2"></span></a>
+                        <a href="#menu-content"><span class="icon-menu2">Menu</span></a>
                     </div>
                     <ul id="menu-content">
                         <li><a href="#off-canvas-nav"><span class="icon-exit">Exit</span></a></li>
