Added in new styles and removed style on home page

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
     </div>
     <div class="row" id="grid_system">
         <div class="row">
-            <div class="one column" id="red"><h2>One</h2><h3>44px</h3></div>
-            <div class="eleven columns" id="darkred"><h2>Eleven</h2><h3>684px</h3></div>
+            <div class="one column bg-red"><h2>One</h2><h3>44px</h3></div>
+            <div class="eleven columns bg-darkred"><h2>Eleven</h2><h3>684px</h3></div>
         </div>
         <div class="row">
-            <div class="two columns" id="orange"><h2>Two</h2><h3>108px</h3></div>
-            <div class="ten columns" id="darkorange"><h2>Ten</h2><h3>620px</h3></div>
+            <div class="two columns bg-orange"><h2>Two</h2><h3>108px</h3></div>
+            <div class="ten columns bg-darkorange"><h2>Ten</h2><h3>620px</h3></div>
         </div>
         <div class="row">
-            <div class="three columns" id="yellow"><h2>Three</h2><h3>172px</h3></div>
-            <div class="nine columns" id="darkyellow"><h2>Nine</h2><h3>556px</h3></div>
+            <div class="three columns bg-yellow"><h2>Three</h2><h3>172px</h3></div>
+            <div class="nine columns bg-darkyellow"><h2>Nine</h2><h3>556px</h3></div>
         </div>
         <div class="row">
-            <div class="four columns" id="turquoise"><h2>Four</h2><h3>236px</h3></div>
-            <div class="eight columns" id="darkturquoise"><h2>Eight</h2><h3>492px</h3></div>
+            <div class="four columns bg-turquoise"><h2>Four</h2><h3>236px</h3></div>
+            <div class="eight columns bg-darkturquoise"><h2>Eight</h2><h3>492px</h3></div>
         </div>
         <div class="row">
-            <div class="five columns" id="green"><h2>Five</h2><h3>300px</h3></div>
-            <div class="seven columns" id="darkgreen"><h2>Seven</h2><h3>428px</h3></div>
+            <div class="five columns bg-green"><h2>Five</h2><h3>300px</h3></div>
+            <div class="seven columns bg-darkgreen"><h2>Seven</h2><h3>428px</h3></div>
         </div>
         <div class="row">
-            <div class="six columns" id="blue"><h2>Six</h2><h3>364px</h3></div>
-            <div class="six columns" id="darkblue"><h2>Six</h2><h3>364px</h3></div>
+            <div class="six columns bg-blue"><h2>Six</h2><h3>364px</h3></div>
+            <div class="six columns bg-darkblue"><h2>Six</h2><h3>364px</h3></div>
         </div>
         <div class="row">
-            <div class="twelve columns" id="purple"><h2>Twelve</h2><h3>940px</h3></div>
+            <div class="twelve columns bg-purple"><h2>Twelve</h2><h3>940px</h3></div>
         </div>
     </div><!--End Grid System -->
     
@@ -122,48 +122,48 @@
         </div>
         <div class="row">
             <div class="one-quarter column color_container">
-                <div class="full" id="red"><h2>#red</h2></div>
-                <div class="full" id="darkred"><h2>#darkred</h2></div>
+                <div class="full bg-red"><h2>.bg-red</h2></div>
+                <div class="full bg-darkred"><h2>.bg-darkred</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="orange"><h2>#orange</h2></div>
-                <div class="full" id="darkorange"><h2>#darkorange</h2></div>
+                <div class="full bg-orange"><h2>.bg-orange</h2></div>
+                <div class="full bg-darkorange"><h2>.bg-darkorange</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="yellow"><h2>#yellow</h2></div>
-                <div class="full" id="darkyellow"><h2>#darkyellow</h2></div>
+                <div class="full bg-yellow"><h2>.bg-yellow</h2></div>
+                <div class="full bg-darkyellow"><h2>.bg-darkyellow</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="turquoise"><h2>#turquoise</h2></div>
-                <div class="full" id="darkturquoise"><h2>#darkturquoise</h2></div>
+                <div class="full bg-turquoise"><h2>.bg-turquoise</h2></div>
+                <div class="full bg-darkturquoise"><h2>.bg-darkturquoise</h2></div>
             </div>
         </div>
         <div class="row">
             <div class="one-quarter column color_container">
-                <div class="full" id="green"><h2>#green</h2></div>
-                <div class="full" id="darkgreen"><h2>#darkgreen</h2></div>
+                <div class="full bg-green"><h2>.bg-green</h2></div>
+                <div class="full bg-darkgreen"><h2>.bg-darkgreen</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="blue"><h2>#blue</h2></div>
-                <div class="full" id="darkblue"><h2>#darkblue</h2></div>
+                <div class="full bg-blue"><h2>.bg-blue</h2></div>
+                <div class="full bg-darkblue"><h2>.bg-darkblue</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="purple"><h2>#purple</h2></div>
-                <div class="full" id="darkpurple"><h2>#darkpurple</h2></div>
+                <div class="full bg-purple"><h2>.bg-purple</h2></div>
+                <div class="full bg-darkpurple"><h2>.bg-darkpurple</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="lightgray"><h2>#lightgray</h2></div>
-                <div class="full" id="silver"><h2>#silver</h2></div>
+                <div class="full bg-lightgray"><h2>.bg-lightgray</h2></div>
+                <div class="full bg-silver"><h2>.bg-silver</h2></div>
             </div>
         </div>
         <div class="row">  
             <div class="one-quarter column color_container">
-                <div class="full" id="gray"><h2>#gray</h2></div>
-                <div class="full" id="darkgray"><h2>#darkgray</h2></div>
+                <div class="full bg-gray"><h2>.bg-gray</h2></div>
+                <div class="full bg-darkgray"><h2>.bg-darkgray</h2></div>
             </div>
             <div class="one-quarter column color_container">
-                <div class="full" id="nightblue"><h2>#nightblue</h2></div>
-                <div class="full" id="midnightblue"><h2>#midnightblue</h2></div>
+                <div class="full bg-nightblue"><h2>.bg-nightblue</h2></div>
+                <div class="full bg-midnightblue"><h2>.bg-midnightblue</h2></div>
             </div>
         </div>
     </div><!-- End Colors -->
@@ -226,7 +226,7 @@
         </div>
         <div class="row">
             <div class="twelve columns">
-                <h2>or try off-canvas! <span class="lightened">nav.green.off-canvas</span></h2>
+                <h2>or try off-canvas! <span class="lightened">nav.off-canvas</span></h2>
                 <nav class="off-canvas" id="off-canvas-nav">
                     <div class="hidden">
                         <a href="#menu-content"><span class="icon-menu2">Menu</span></a>
