[t: 2 hours and 20 minutes]
testing out a time hub application

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="row">
             <div class="twelve columns">
                 <h2>or make it responsive! <span class="lightened">nav.green.rounded</span></h2>
-                <nav class="green rounded responsive">
+                <nav class="rounded responsive">
                     <div class="hidden">
                         <a href="#" id="menu"><span class="icon-menu"></span></a>
                     </div>
