--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
         <div class="row">
             <div class="twelve columns">
                 <h2>or make it responsive! <span class="lightened">nav.green.rounded</span></h2>
-                <nav class="rounded responsive">
+                <nav class="green rounded responsive">
                     <div class="hidden">
                         <a href="#" id="menu"><span class="icon-menu"></span></a>
                     </div>
                     <ul>
                         <li><a href="#" class="active"><span class="icon-home2">Home</span></a></li>
-                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 1</a></li>
                         <li><a href="#">Link 2</a></li>
                         <li><a href="#">Link 3</a></li>
                         <li><a href="#">Link 4</a></li>
